Fixed Run Game Button (it actually works for me now.)
git-svn-id: https://svn.code.sf.net/p/pineapple-ide/svn/Sabre/Trunk@398 1b6dd1f4-0bef-4bc2-93b5-a664bc25159d